--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "shortid": "^2.2.16",
     "vue": "^3.0.0",
+    "vue-parallaxy": "^1.1.1",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@types/vue": "^2.0.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0"
+    "@vue/compiler-sfc": "^3.0.0",
+    "vue-parallax": "^1.1.1"
   }
 }
